--- a/app/main.css
+++ b/app/main.css
@@ -1,9 +1,9 @@
 body {
-  background: cornsilk;
+  background: lightblue;
   font-family: sans-serif;
 }
 
-.lane {
+.shoplist {
   display: inline-block;
   margin: 1em;
   background-color: #efefef;
@@ -13,7 +13,7 @@ body {
   vertical-align: top;
 }
 
-.lane-header {
+.shoplist-header {
   overflow: auto;
   padding: 1em;
   color: #efefef;
@@ -22,32 +22,32 @@ body {
   border-top-right-radius: 0.5em;
 }
 
-.lane-name {
+.shoplist-name {
   float: left;
 }
 
-.lane-add-note {
+.shoplist-add-product {
   float: left;
   margin-right: 0.5em;
 }
 
-.lane-delete {
+.shoplist-delete {
   float: right;
   margin-left: 0.5em;
   visibility: hidden;
 }
 
-.lane-header:hover .lane-delete {
+.shoplist-header:hover .shoplist-delete {
   visibility: visible;
 }
 
-.add-lane, .lane-add-note button {
+.add-shoplist, .shoplist-add-product button {
   cursor: pointer;
   background-color: #fdfdfd;
   border: 1px solid #ccc;
 }
 
-.lane-delete button {
+.shoplist-delete button {
   padding: 0;
   cursor: pointer;
   color: white;
@@ -55,35 +55,35 @@ body {
   border: 0;
 }
 
-.add-note {
+.add-product {
   background-color: #fdfdfd;
   border: 1px solid #ccc;
 }
 
-.notes {
+.products {
   margin: 0.5em;
   padding-left: 0;
   max-width: 10em;
   list-style: none;
 }
 
-.note {
+.product {
   margin-bottom: 0.5em;
   padding: 0.5em;
   background-color: #fdfdfd;
   box-shadow: 0 0 0.3em 0.03em rgba(0, 0, 0, 0.3);
 }
-.note:hover {
+.product:hover {
   box-shadow: 0 0 0.3em 0.03em rgba(0, 0, 0, 0.7);
   transition: 0.6s;
 }
 
-.note .value {
+.product .value {
   /* force to use inline-block so that it gets minimum height */
   display: inline-block;
 }
 
-.note .delete {
+.product .delete {
   float: right;
   padding: 0;
   background-color: #fdfdfd;
@@ -91,6 +91,6 @@ body {
   cursor: pointer;
   visibility: hidden;
 }
-.note:hover .delete {
+.product:hover .delete {
   visibility: visible;
 }
