--- a/app/main.css
+++ b/app/main.css
@@ -4,7 +4,7 @@ body {
 }
 
 .shoplist {
-  display: inline-block;
+  /*display: inline-block;*/
   margin: 1em;
   background-color: #efefef;
   border: 1px solid #ccc;
@@ -65,6 +65,7 @@ body {
   padding-left: 0;
   max-width: 10em;
   list-style: none;
+  display: inline;
 }
 
 .product {
